--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.12.7",
     "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.6.0",
+    "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@lens-protocol/widgets-react": "^0.0.11",
     "@lighthouse-web3/sdk": "^0.2.2",
+    "@lit-protocol/access-control-conditions": "^2.2.0",
+    "@lit-protocol/auth-helpers": "^2.2.0",
+    "@lit-protocol/bls-sdk": "^2.2.0",
+    "@lit-protocol/constants": "^2.2.0",
+    "@lit-protocol/crypto": "^2.2.0",
+    "@lit-protocol/lit-node-client": "^2.2.0",
+    "@lit-protocol/lit-node-client-nodejs": "^2.2.0",
+    "@lit-protocol/types": "^2.2.0",
     "@polybase/auth": "^0.6.0",
     "@polybase/client": "^0.6.0",
     "@polybase/react": "^0.5.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
+    "@react-oauth/google": "^0.4.0",
     "@tableland/sdk": "^4.2.2",
     "axios": "^1.3.4",
     "ethers": "^5.7.2",
@@ -31,16 +40,7 @@
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "wagmi": "^0.12.12",
-    "ws": "^8.0.0",
-    "@lit-protocol/access-control-conditions": "^2.2.0",
-		"@lit-protocol/auth-helpers": "^2.2.0",
-		"@lit-protocol/bls-sdk": "^2.2.0",
-		"@lit-protocol/constants": "^2.2.0",
-		"@lit-protocol/crypto": "^2.2.0",
-		"@lit-protocol/lit-node-client": "^2.2.0",
-		"@lit-protocol/lit-node-client-nodejs": "^2.2.0",
-		"@lit-protocol/types": "^2.2.0",
-		"@react-oauth/google": "^0.4.0"
+    "ws": "^8.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
