--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "did-jwt": "^5.2.0",
+    "did-resolver": "^3.0.1"
   }
 }
